@@ -766,6 +766,10 @@ paymentez:
   application_code: APPCODE
   app_key: APPKEY
 
+paymentez_ecuador:
+  application_code: APPCODE
+  app_key: APPKEY
+
 paymill:
   private_key: a9580be4a7b9d0151a3da88c6c935ce0
   public_key: 57313835619696ac361dc591bc973626
