@@ -13,6 +13,7 @@
 * PaySafe: Fix commit for `unstore` method [ajawadmirza] #4303
 * Ebanx: Add support for `order_number` field [ali-hassan] #4304
 * BlueSnap: Add support for  `idempotency_key` field [drkjc] #4305
+* Paymentez: Update `capture` method to verify by otp for pending transactions [ajawadmirza] #4267
 
 == Version 1.125.0 (January 20, 2022)
 * Wompi: support gateway [therufs] #4173
